# Girl-Packer

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  auto_pack_plan.md  build.bat  build_nuitka.py  build_pyinstaller.py  config.yaml  main.py  pack guidw  project_data.py  pyproject.toml  requirements-dev.txt  requirements_final_compatible.txt  security.md  setup.py  steps to follow.md  todo_plan.md
.github/: copilot-instructions.md
Hunter/: 1_clothed.webm  1_sex-give_oral.webm  2_sex-give_oral.webm  3_clothed.webm  4_clothed.webm  5_bare.webm  5_clothed.webm  6_bare-notop.webm  6_clothed.webm  7_bare-notop,nobot.webm  7_clothed.webm  event_config.json  lexi_belle_hunter.rpy  lexi_belle_hunter.rpyc
ai/: __init__.py  pipeline.py
database/: __init__.py  character_traits.json  clothing_definitions.json  event_definitions.json  shoots_config.json  shoots_tags.json  vid_tags.json
gui/: __init__.py  ai_training_panel.py  auto_pack_panel.py  character_setup_panel.py  dashboard_panel.py  data_review_panel.py  event_maker_panel.py  main_window.py  pack_review_panel.py  photo_maker_panel.py  report_bug_dialog.py  settings_panel.py  settings_panel2.py  shoot_maker_panel.py  style.qss  vids_maker_panel.py
scripts/: smoke_test_panels.py
tests/: __init__.py  test_event_maker.py  test_file_ops.py  test_integration.py  test_pipeline.py  test_pro_verifier.py  test_project.py  test_project_events.py  test_transcription.py
tools/: __init__.py  background_remover.py  cropper.py  frame_extractor.py  logger.py  media_exporter.py  pack_analyzer.py  rpy_generator.py  video_splitter.py  video_transcriber.py
utils/: __init__.py  (+8 more)
(+38 files in other folders)
