[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "girl-packer"
version = "1.0.0"
description = "PySide6-based GUI tool for processing media assets into Ren'Py game content"
authors = [
    {name = "Ahmed Asker", email = "ahmedasker115@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.3",
    "opencv-python==4.8.1.78",
    "Pillow==10.0.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "ultralytics==8.0.186",
    "scikit-learn==1.3.0",
    "PySide6==6.6.1",
    "qtawesome==1.3.1",
    "scenedetect==0.6.7.1",
    "transparent-background==1.3.2",
    "imagehash==4.3.1",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "requests==2.31.0",
    "protobuf==3.20.3",
    "typing-extensions==4.8.0",
    "filelock==3.13.1",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "python-vlc>=3.0.21201,<4.0.0"
]

[project.optional-dependencies]
build = ["nuitka", "pyinstaller"]
dev = ["pytest", "flake8", "black"]

[tool.setuptools]
packages = ["ai", "database", "gui", "tools", "utils", "workflows"]

[tool.setuptools.package-data]
"*" = [
    "*.json",
    "*.yaml",
    "*.qss",
    "*.pth",
    "*.pt",
    "*.exe"
]

[tool.setuptools.data-files]
"assets" = ["assets/**/*"]
"database" = ["database/**/*"]
"gui" = ["gui/style.qss"]